--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,15 @@
 ---
-title: "index"
+title: "Final Assignment"
 author: "Gonzalo de Quesada"
 date: "12 de diciembre de 2017"
-output: html_document
+output: 
+html_document:
+    theme: cosmo
+    toc: true
+    toc_depth: 2
+    fig_caption: true
+    fig_width: 6
+    fig_height: 4
+    code_folding: hide
 ---
 # Final Assignment
-
-## Data wrangling
